# freemat-js

./: .gitignore  CMakeLists.txt  Complex.hpp  Makefile  Notes.txt  README.md  a.m  add.js  addon_utils.hpp  bench.js  bench2.js  bench3.js  bench4.js  bench6.js  bench7.js  binding.gyp  c.m  dense_solver.cpp  double.js  double_scalar.js  dparse.js  e.m  freemat.js  freemat.pegjs  gt.js  j.m  k.m  ldivide.js  lt.js  mat.cpp  multiply.js  myobject.cc  myobject.h  ncat.js  op_utils.js  package.json  rdivide.js  subtract.js  t.js  t.m  (+5 more)
addon_source/: Complex.hpp  LAPACK.hpp  addon_utils.hpp  dense_solver.hpp  mat.cpp  transpose.cpp  transpose.hpp
bench/: bench.js  bench2.js  bench3.js  bench4.js  bench5.js  bench6.js  bench7.js  bench8.js  test.js
ops/: add.js  and.js  eq.js  ge.js  ldivide.js  le.js  multiply.js  ne.js  op_utils.js  or.js  power.js  rdivide.js  xor.js
src/: arrays.ts  ast.ts  binop.ts  cmpop.ts  colon.ts  comparators.ts  complex.ts  double.ts  fm.ts  freemat_parser.d.ts  inspect.ts  jswalker.ts  mat.node.d.ts  math.ts  mwalker.ts  ncat.ts  notes.txt  operators.ts  parser.ts  scanm.ts  scanner.ts  symbol.ts  test.ts  test2.ts  test3.ts  ulp.ts  walker.ts
test/: double_assignment_test_1.js  double_mldivide_test_1.js  double_mrdivide_test_1.js  double_mrdivide_test_1.js~  double_msolve_test_1.js  double_mtimes_test_1.js  double_power_test_1.js  double_resize_test_1.js  double_scalar_test_1.js  double_timing_test_1.js  double_transpose_test_1.js  parTest_while0001.js  parseTest_mult0001.js  parser_assignment_1.js  parser_classdef_1.js  parser_comments_1.js  (+13 more)
(+26 files in other folders)
